[add] deploy 流程

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./dist/css/page/page.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script src="./dist/js/chunk/node_modules.bundle.js"></script>
+    <script src="./dist/js/chunk/vendor.bundle.js"></script>
 </head>
 <body>
     <div id="appBox" cz-shortcut-listen="true">
