--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="appBox" cz-shortcut-listen="true">
-      111
+      111 {{ input }}
     </div>
     <script src="./dist/js/app/index.bundle.js"></script>
 </body>
