[add] router dymanic component

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="appBox" cz-shortcut-listen="true">
-      111 {{ input }}
+        <main-page></main-page>
     </div>
     <script src="./dist/js/app/index.bundle.js"></script>
 </body>
