--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>vue_webpack_basic</title>
+    <title>Draw Card</title>
     <meta name='author' content='Byron.Chen' />
-    <meta name='apple-mobile-web-app-title' content='vue_webpack_basic' />
+    <meta name='apple-mobile-web-app-title' content='Draw Card' />
     <meta name='apple-mobile-web-app-capable' content='yes' />
     <meta name='apple-touch-fullscreen' content='yes' />
     <meta name='apple-mobile-web-app-status-bar-style' content='black' />
     <meta name='mobile-web-app-capable' content='yes' />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimum-scale=1, maximum-scale=1">
-    <meta name='description' content='vue_webpack_basic' />
+    <meta name='description' content='This is a free online drawing program based on images, suitable for your FB and IG fan page marketing lucky draw events, company annual spring banquet live draws, or event gatherings and festival lucky draws. The simple and user-friendly input interface allows you to quickly organize an exciting and fair drawing activity.' />
+    <link rel="canonical" href="https://apan1121.github.io/drawCard/" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href=""/>
-    <link rel="apple-touch-icon" sizes="72x72" href=""/>
-    <link rel="apple-touch-icon" sizes="114x114" href=""/>
-    <link rel="apple-touch-icon" sizes="144x144" href=""/>
+    <link rel="apple-touch-icon" sizes="57x57" href="https://apan1121.github.io/drawCard/dist/img/logo57x57.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="https://apan1121.github.io/drawCard/dist/img/logo72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="https://apan1121.github.io/drawCard/dist/img/logo114x114.png"/>
+    <link rel="apple-touch-icon" sizes="144x144" href="https://apan1121.github.io/drawCard/dist/img/logo144x144.png"/>
 
-    <meta property='og:image' content='' />
+    <meta property='og:image' content='https://apan1121.github.io/drawCard/dist/img/logo.png' />
     <meta property='og:image:width' content='512' />
     <meta property='og:image:height' content='512' />
-    <meta property='og:title' content='vue_webpack_basic' />
-    <meta property='og:description' content='vue_webpack_basic' />
+    <meta property='og:title' content='Draw Card' />
+    <meta property='og:description' content='This is a free online drawing program based on images, suitable for your FB and IG fan page marketing lucky draw events, company annual spring banquet live draws, or event gatherings and festival lucky draws. The simple and user-friendly input interface allows you to quickly organize an exciting and fair drawing activity.' />
     <meta property='og:type' content='website' />
-    <meta property='og:url' content='' />
+    <meta property='og:url' content='https://apan1121.github.io/drawCard/' />
 
-    <link rel="icon" href="" type="image/x-icon" />
+    <link rel="icon" href="./dist/img/logo.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
@@ -36,7 +37,11 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <script>
-        var jsVars = {};
+        var jsVars = {
+            CONFIG: {
+                LOCALE_SUPPORT: {'en': 'english', 'zh-TW': '中文'},
+            },
+        };
         var v = new Date().getTime();
         var head = document.querySelector('head');
 
@@ -123,65 +128,69 @@
             }
         }, 1);
     </script>
-
-
-
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89978672-3"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZG82XDYLM6"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'UA-89978672-3');
+    gtag('config', 'G-ZG82XDYLM6');
     </script>
 
-    <script type="text/javascript">
-    (function(e, a) {
-        if (!a.__SV) {
-            var b = window;
-            try {
-                var c, l, i, j = b.location,
-                    g = j.hash;
-                c = function(a, b) { return (l = a.match(RegExp(b + "=([^&]*)"))) ? l[1] : null };
-                g && c(g, "state") && (i = JSON.parse(decodeURIComponent(c(g, "state"))), "mpeditor" === i.action && (b.sessionStorage.setItem("_mpcehash", g), history.replaceState(i.desiredHash || "", e.title, j.pathname + j.search)))
-            } catch (m) {}
-            var k, h;
-            window.mixpanel = a;
-            a._i = [];
-            a.init = function(b, c, f) {
-                function e(b, a) {
-                    var c = a.split(".");
-                    2 == c.length && (b = b[c[0]], a = c[1]);
-                    b[a] = function() {
-                        b.push([a].concat(Array.prototype.slice.call(arguments,
-                            0)))
+    <!-- Paste this right before your closing </head> tag -->
+    <script type = "text/javascript" >
+        (function(f, b) {
+            if (!b.__SV) {
+                var e, g, i, h;
+                window.mixpanel = b;
+                b._i = [];
+                b.init = function(e, f, c) {
+                    function g(a, d) {
+                        var b = d.split(".");
+                        2 == b.length && ((a = a[b[0]]), (d = b[1]));
+                        a[d] = function() {
+                            a.push([d].concat(Array.prototype.slice.call(arguments, 0)));
+                        };
                     }
-                }
-                var d = a;
-                "undefined" !== typeof f ? d = a[f] = [] : f = "mixpanel";
-                d.people = d.people || [];
-                d.toString = function(b) {
-                    var a = "mixpanel";
-                    "mixpanel" !== f && (a += "." + f);
-                    b || (a += " (stub)");
-                    return a
+                    var a = b;
+                    "undefined" !== typeof c ? (a = b[c] = []) : (c = "mixpanel");
+                    a.people = a.people || [];
+                    a.toString = function(a) {
+                        var d = "mixpanel";
+                        "mixpanel" !== c && (d += "." + c);
+                        a || (d += " (stub)");
+                        return d;
+                    };
+                    a.people.toString = function() {
+                        return a.toString(1) + ".people (stub)";
+                    };
+                    i = "disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
+                    for (h = 0; h < i.length; h++) g(a, i[h]);
+                    var j = "set set_once union unset remove delete".split(" ");
+                    a.get_group = function() {
+                        function b(c) {
+                            d[c] = function() {
+                                call2_args = arguments;
+                                call2 = [c].concat(Array.prototype.slice.call(call2_args, 0));
+                                a.push([e, call2]);
+                            };
+                        }
+                        for (var d = {}, e = ["get_group"].concat(Array.prototype.slice.call(arguments, 0)), c = 0; c < j.length; c++) b(j[c]);
+                        return d;
+                    };
+                    b._i.push([e, f, c]);
                 };
-                d.people.toString = function() { return d.toString(1) + ".people (stub)" };
-                k = "disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
-                for (h = 0; h < k.length; h++) e(d, k[h]);
-                a._i.push([b, c, f])
-            };
-            a.__SV = 1.2;
-            b = e.createElement("script");
-            b.type = "text/javascript";
-            b.async = !0;
-            b.src = "undefined" !== typeof MIXPANEL_CUSTOM_LIB_URL ? MIXPANEL_CUSTOM_LIB_URL : "file:" === e.location.protocol && "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//) ? "https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js" : "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";
-            c = e.getElementsByTagName("script")[0];
-            c.parentNode.insertBefore(b, c)
-        }
-    })(document, window.mixpanel || []);
-    mixpanel.init("cb323d101557a4e4d419ac90f080f397");
-    </script> -->
-
+                b.__SV = 1.2;
+                e = f.createElement("script");
+                e.type = "text/javascript";
+                e.async = !0;
+                e.src = "undefined" !== typeof MIXPANEL_CUSTOM_LIB_URL ? MIXPANEL_CUSTOM_LIB_URL : "file:" === f.location.protocol && "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//) ? "https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js" : "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";
+                g = f.getElementsByTagName("script")[0];
+                g.parentNode.insertBefore(e, g);
+            }
+        })(document, window.mixpanel || []);
+        mixpanel.init("fbcb54012cd09566c4d2df34549b76c5");
+    </script>
 </body>
 </html>
