--- a/index.html
+++ b/index.html
@@ -4,31 +4,30 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Draw Card</title>
+    <title>vue_webpack_basic</title>
     <meta name='author' content='Byron.Chen' />
-    <meta name='apple-mobile-web-app-title' content='Draw Card' />
+    <meta name='apple-mobile-web-app-title' content='vue_webpack_basic' />
     <meta name='apple-mobile-web-app-capable' content='yes' />
     <meta name='apple-touch-fullscreen' content='yes' />
     <meta name='apple-mobile-web-app-status-bar-style' content='black' />
     <meta name='mobile-web-app-capable' content='yes' />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, minimum-scale=1, maximum-scale=1">
-    <meta name='description' content='This is a free online drawing program based on images, suitable for your FB and IG fan page marketing lucky draw events, company annual spring banquet live draws, or event gatherings and festival lucky draws. The simple and user-friendly input interface allows you to quickly organize an exciting and fair drawing activity.' />
-    <link rel="canonical" href="https://apan1121.github.io/drawCard/" />
+    <meta name='description' content='vue_webpack_basic' />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="https://apan1121.github.io/drawCard/dist/img/logo57x57.png"/>
-    <link rel="apple-touch-icon" sizes="72x72" href="https://apan1121.github.io/drawCard/dist/img/logo72x72.png"/>
-    <link rel="apple-touch-icon" sizes="114x114" href="https://apan1121.github.io/drawCard/dist/img/logo114x114.png"/>
-    <link rel="apple-touch-icon" sizes="144x144" href="https://apan1121.github.io/drawCard/dist/img/logo144x144.png"/>
+    <link rel="apple-touch-icon" sizes="57x57" href=""/>
+    <link rel="apple-touch-icon" sizes="72x72" href=""/>
+    <link rel="apple-touch-icon" sizes="114x114" href=""/>
+    <link rel="apple-touch-icon" sizes="144x144" href=""/>
 
-    <meta property='og:image' content='https://apan1121.github.io/drawCard/dist/img/logo.png' />
+    <meta property='og:image' content='' />
     <meta property='og:image:width' content='512' />
     <meta property='og:image:height' content='512' />
-    <meta property='og:title' content='Draw Card' />
-    <meta property='og:description' content='This is a free online drawing program based on images, suitable for your FB and IG fan page marketing lucky draw events, company annual spring banquet live draws, or event gatherings and festival lucky draws. The simple and user-friendly input interface allows you to quickly organize an exciting and fair drawing activity.' />
+    <meta property='og:title' content='vue_webpack_basic' />
+    <meta property='og:description' content='vue_webpack_basic' />
     <meta property='og:type' content='website' />
-    <meta property='og:url' content='https://apan1121.github.io/drawCard/' />
+    <meta property='og:url' content='' />
 
-    <link rel="icon" href="./dist/img/logo.ico" type="image/x-icon" />
+    <link rel="icon" href="" type="image/x-icon" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
@@ -129,17 +128,17 @@
         }, 1);
     </script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZG82XDYLM6"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZG82XDYLM6"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'G-ZG82XDYLM6');
-    </script>
+    </script> -->
 
     <!-- Paste this right before your closing </head> tag -->
-    <script type = "text/javascript" >
+    <!-- <script type = "text/javascript" >
         (function(f, b) {
             if (!b.__SV) {
                 var e, g, i, h;
@@ -191,6 +190,6 @@
             }
         })(document, window.mixpanel || []);
         mixpanel.init("fbcb54012cd09566c4d2df34549b76c5");
-    </script>
+    </script> -->
 </body>
 </html>
